--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-<h1>Test</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HackademyDia3</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+<div class="container">
+    <header class="header">
+        <img src="logo.png" alt="HackademyDia3 Logo" class="logo">
+    </header>
+    <main class="content">
+        <h1>Welcome to HackademyDia3</h1>
+        <p>Your journey to becoming a coding expert starts here. Dive into immersive learning experiences and join a community of passionate learners.</p>
+        <button class="cta-button">Get Started</button>
+    </main>
+    <footer class="footer">
+        <p>&copy; 2024 HackademyDia3. All rights reserved.</p>
+    </footer>
+</div>
+</body>
+</html>
