--- a/index.html
+++ b/index.html
@@ -9,15 +9,14 @@
 <body>
 <div class="container">
     <header class="header">
-        <img src="logo.png" alt="HackademyDia3 Logo" class="logo">
+        <img src="logo.png" class="logo">
     </header>
     <main class="content">
         <h1>Welcome to HackademyDia3</h1>
-        <p>Your journey to becoming a coding expert starts here. Dive into immersive learning experiences and join a community of passionate learners.</p>
-        <button class="cta-button">Get Started</button>
+        <p>Descubre lo simple y efectivo que es facilitar tu proceso de desarrollo junto a GitHub.</p>
     </main>
     <footer class="footer">
-        <p>&copy; 2024 HackademyDia3. All rights reserved.</p>
+        <p>&copy; 2024 HackademyDia3</p>
     </footer>
 </div>
 </body>
