--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
     <main class="content">
         <h1>Welcome to HackademyDia3</h1>
-        <p>Descubre lo simple y efectivo que es facilitar tu proceso de desarrollo junto a GitHub.</p>
+        <p>Descubre lo siple y efectivo que es facilitar tu proceso de desarrollo junto a GitHub.</p>
     </main>
     <footer class="footer">
         <p>&copy; 2024 HackademyDia3</p>
