--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <main class="content">
         <h1>Welcome to HackademyDia3</h1>
         <p>Descubre lo simple y efectivo que es facilitar tu proceso de desarrollo junto a GitHub.</p>
+        <button class="btn">Iniciar</button>
     </main>
     <footer class="footer">
         <p>&copy; 2024 HackademyDia3</p>
